// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ssr basic 1`] = `

<style data-emotion-css="1lrxbo5">
  .css-1lrxbo5{color:hotpink;}
</style>
<div class="css-1lrxbo5">
  some hotpink text
</div>

`;

exports[`ssr className 1`] = `

<div data-reactroot>
  <style data-emotion-ssr="181qz4b">
    .css-181qz4b{color:hotpink;}
  </style>
  <div class="css-181qz4b">
  </div>
</div>

`;

exports[`ssr global 1`] = `

<style data-emotion-css="6l7sk3">
  html{background-color:hotpink;}
</style>

`;

exports[`ssr keyframes 1`] = `

<style data-emotion-css="animation-1kyaq4y">
  @-webkit-keyframes animation-1kyaq4y{from{color:green;}to{color:blue;}}@keyframes animation-1kyaq4y{from{color:green;}to{color:blue;}}
</style>
<style data-emotion-css="12xprl7">
  .css-12xprl7{-webkit-animation:1s [object Object];animation:1s [object Object];}
</style>
<div class="css-12xprl7">
</div>

`;

exports[`ssr only render a style once with Style 1`] = `

<style data-emotion-css="bjcoli">
  .css-bjcoli{color:green;}
</style>
<div class="css-bjcoli">
  <style data-emotion-css="animation-1bi8wtt">
    @-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}
  </style>
  <style data-emotion-css="1wh2ide">
    .css-1wh2ide{-webkit-animation:animation-1bi8wtt 1s;animation:animation-1bi8wtt 1s;}
  </style>
  <div class="css-1wh2ide">
  </div>
</div>

`;

exports[`ssr only render a style once with styled 1`] = `

<style data-emotion-css="bjcoli">
  .css-bjcoli{color:green;}
</style>
<div class="css-bjcoli">
  <style data-emotion-css="181qz4b">
    .css-181qz4b{color:hotpink;}
  </style>
  <div class="css-181qz4b">
  </div>
  <div class="css-181qz4b">
  </div>
</div>

`;

exports[`ssr only render a style once with the css prop 1`] = `

<style data-emotion-css="bjcoli">
  .css-bjcoli{color:green;}
</style>
<div class="css-bjcoli">
  <style data-emotion-css="1lrxbo5">
    .css-1lrxbo5{color:hotpink;}
  </style>
  <div class="css-1lrxbo5">
  </div>
  <div class="css-1lrxbo5">
  </div>
</div>

`;
